/*
Copyright 2024 Nokia.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.kuidio.kuid.apis.backend.as.v1alpha1;

import "github.com/kuidio/kuid/apis/common/v1alpha1/generated.proto";
import "github.com/kuidio/kuid/apis/condition/v1alpha1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/kuidio/kuid/apis/backend/as/v1alpha1";

// ASClaim is the Schema for the ASClaim API
//
// +k8s:openapi-gen=true
message ASClaim {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ASClaimSpec spec = 2;

  optional ASClaimStatus status = 3;
}

// ASClaimList contains a list of ASClaims
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message ASClaimList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated ASClaim items = 2;
}

// ASClaimSpec defines the desired state of ASClaim
message ASClaimSpec {
  // Index defines the index for the AS Claim
  optional string index = 1;

  // ASID defines the AS for the AS claim
  optional uint32 id = 2;

  // Range defines the AS range for the AS claim
  // The following notation is used: start-end <start-ASID>-<end-ASID>
  // the ASs in the range must be consecutive
  optional string range = 3;

  // ClaimLabels define the user defined labels and selector labels used
  // in resource claim
  optional github.com.kuidio.kuid.apis.common.v1alpha1.ClaimLabels claimLabels = 4;

  // Owner defines the ownerReference of the ASClaim
  // Allow for different namesapces, hence it is part of the spec
  optional github.com.kuidio.kuid.apis.common.v1alpha1.OwnerReference owner = 5;
}

// ASClaimStatus defines the observed state of ASClaim
message ASClaimStatus {
  // ConditionedStatus provides the status of the IPClain using conditions
  // - a ready condition indicates the overall status of the resource
  optional github.com.kuidio.kuid.apis.condition.v1alpha1.ConditionedStatus conditionedStatus = 1;

  // ASID defines the AS for the AS claim
  // +optional
  optional uint32 id = 2;

  // ASRange defines the AS range for the AS claim
  // +optional
  optional string range = 3;

  // ExpiryTime defines when the claim expires
  // +kubebuilder:validation:Optional
  // +optional
  optional string expiryTime = 4;
}

message ASDynamicIDSyntaxValidator {
}

// ASEntry is the Schema for the ASentry API
//
// +k8s:openapi-gen=true
message ASEntry {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ASEntrySpec spec = 2;

  optional ASEntryStatus status = 3;
}

// ASEntryList contains a list of ASEntries
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message ASEntryList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated ASEntry items = 2;
}

// ASEntrySpec defines the desired state of ASEntry
message ASEntrySpec {
  // ASIndex defines the AS index for the AS Claim
  optional string index = 1;

  // ClaimType defines the claimType of the AS Entry
  optional string claimType = 2;

  // ID defines the id of the AS entry in the tree
  optional string id = 3;

  // ClaimLabels define the user defined labels and selector labels used
  // in resource claim
  optional github.com.kuidio.kuid.apis.common.v1alpha1.ClaimLabels claimLabels = 4;

  // Claim defines the name of the claim that is the origin of this  entry
  optional string claim = 5;

  // Owner defines the ownerReference of the ASClaim
  // Allow for different namesapces, hence it is part of the spec
  optional github.com.kuidio.kuid.apis.common.v1alpha1.OwnerReference owner = 6;
}

// ASEntryStatus defines the observed state of ASEntry
message ASEntryStatus {
  // ConditionedStatus provides the status of the ASEntry using conditions
  // - a ready condition indicates the overall status of the resource
  optional github.com.kuidio.kuid.apis.condition.v1alpha1.ConditionedStatus conditionedStatus = 1;
}

// ASIndex is the Schema for the ASIndex API
//
// +k8s:openapi-gen=true
message ASIndex {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ASIndexSpec spec = 2;

  optional ASIndexStatus status = 3;
}

// ASIndexList contains a list of ASIndexs
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message ASIndexList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated ASIndex items = 2;
}

// ASIndexSpec defines the desired state of ASIndex
message ASIndexSpec {
  // MinID defines the min VLAN ID the index supports
  // +optional
  optional uint32 minID = 1;

  // MaxID defines the max VLAN ID the index supports
  // +optional
  optional uint32 maxID = 2;

  // UserDefinedLabels define metadata to the resource.
  // defined in the spec to distingiush metadata labels from user defined labels
  optional github.com.kuidio.kuid.apis.common.v1alpha1.UserDefinedLabels userDefinedLabels = 3;
}

// ASIndexStatus defines the observed state of ASIndex
message ASIndexStatus {
  // MinID defines the min VLAN ID the index supports
  // +optional
  optional uint32 minID = 1;

  // MaxID defines the max VLAN ID the index supports
  // +optional
  optional uint32 maxID = 2;

  // ConditionedStatus provides the status of the VLANIndex using conditions
  // - a ready condition indicates the overall status of the resource
  optional github.com.kuidio.kuid.apis.condition.v1alpha1.ConditionedStatus conditionedStatus = 3;
}

message ASRangeSyntaxValidator {
}

message ASStaticIDSyntaxValidator {
}

